# slidectl

./: .gitignore  .mise.toml  .tool-versions  README.md  package.json  pyproject.toml
.claude/commands/: README.md  document.md  green.md  plan.md  red.md  refactor.md  tdd.md  verify.md
config/: layouts.yaml  policy.json
docs/: dataflow.md  requirements.md  spec.md
src/slidectl/: __init__.py  cli.py  config.py  ingest.py  logger.py  state.py  workspace.py
tests/: test_cli_init.py  test_config.py  test_ingest.py  test_logger.py  test_state.py  test_workspace.py
